--- a/packages/automation.yaml
+++ b/packages/automation.yaml
@@ -99,6 +99,8 @@ automation:
       - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_on
         entity_id: switch.front_porch_switch
+      - service: switch.turn_on
+        entity_id: switch.entry_light_switch
 
   - id: night_porch_off
     hide_entity: True
@@ -110,6 +112,8 @@ automation:
       - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_off
         entity_id: switch.front_porch_switch
+      - service: switch.turn_off
+        entity_id: switch.entry_light_switch
 
   - id: morning_porch_on
     hide_entity: True
@@ -125,6 +129,8 @@ automation:
       - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_on
         entity_id: switch.front_porch_switch
+      - service: switch.turn_on
+        entity_id: switch.entry_light_switch
 
   - id: morning_porch_off
     hide_entity: True
@@ -136,6 +142,8 @@ automation:
       - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_off
         entity_id: switch.front_porch_switch
+      - service: switch.turn_off
+        entity_id: switch.entry_light_switch
 
   - id: night_holiday_lights_on
     hide_entity: True
