--- a/packages/automation.yaml
+++ b/packages/automation.yaml
@@ -154,7 +154,7 @@ automation:
     action:
       - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_on
-        entity_id: switch.holiday_lights_1
+        entity_id: switch.holiday_lights_switch
 
   - id: night_holiday_lights_off
     hide_entity: True
@@ -165,7 +165,7 @@ automation:
     action:
       - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_off
-        entity_id: switch.holiday_lights_1
+        entity_id: switch.holiday_lights_switch
 
   - id: morning_holiday_lights_on
     hide_entity: True
@@ -180,7 +180,7 @@ automation:
     action:
       - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_on
-        entity_id: switch.holiday_lights_1
+        entity_id: switch.holiday_lights_switch
 
   - id: morning_holiday_lights_off
     hide_entity: True
@@ -191,7 +191,7 @@ automation:
     action:
       - delay: "00:{{- ((range(1,9) | random) ~ '').rjust(2, '0') -}}:00"
       - service: switch.turn_off
-        entity_id: switch.holiday_lights_1
+        entity_id: switch.holiday_lights_switch
 
 
   - id: night_back_porch_on
